# ompi

./: configure.ac
ompi/communicator/: comm_init.c  communicator.h
ompi/mca/coll/adapt/: Makefile.am  coll_adapt.h  coll_adapt_algorithms.h  coll_adapt_allreduce.c  coll_adapt_alltoallv.c  coll_adapt_bcast.c  coll_adapt_component.c  coll_adapt_context.c  coll_adapt_context.h  coll_adapt_cuda.c  coll_adapt_cuda.h  coll_adapt_cuda_mpool.c  coll_adapt_cuda_mpool.h  coll_adapt_iallreduce.c  coll_adapt_ialltoallv.c  coll_adapt_ibcast.c  coll_adapt_inbuf.c  coll_adapt_inbuf.h  coll_adapt_ireduce.c  coll_adapt_item.c  coll_adapt_item.h  coll_adapt_module.c  coll_adapt_op.h  coll_adapt_reduce.c  help-mpi-coll-adapt.txt
ompi/mca/coll/adapt/cuda/: coll_adapt_cuda.cu  coll_adapt_cuda.cuh
ompi/mca/coll/adapt_cuda/: Makefile.am  coll_adapt_alltoallv.c  coll_adapt_cuda.h  coll_adapt_cuda_algorithms.h  coll_adapt_cuda_allreduce.c  coll_adapt_cuda_bcast.c  coll_adapt_cuda_component.c  coll_adapt_cuda_context.c  coll_adapt_cuda_context.h  coll_adapt_cuda_inbuf.c  coll_adapt_cuda_inbuf.h  coll_adapt_cuda_item.c  coll_adapt_cuda_item.h  coll_adapt_cuda_module.c  coll_adapt_cuda_mpool.c  coll_adapt_cuda_mpool.h  coll_adapt_cuda_nccl.c  coll_adapt_cuda_nccl.h  coll_adapt_cuda_reduce.c  coll_adapt_cuda_reduce_2.c  coll_adapt_cuda_topo.c  coll_adapt_cuda_topo.h  coll_adapt_iallreduce.c  coll_adapt_ibcast.c  coll_adapt_ireduce.c
ompi/mca/coll/base/: coll_base_alltoallv.c  coll_base_bcast.c  coll_base_frame.c  coll_base_functions.h  coll_base_reduce.c  coll_base_topo.c  coll_base_topo.h
ompi/mca/coll/future/: Makefile.am  coll_future.h  coll_future_allgather.c  coll_future_allreduce.c  coll_future_bcast.c  coll_future_component.c  coll_future_gather.c  coll_future_item.c  coll_future_item.h  coll_future_module.c  coll_future_scatter.c  coll_future_trigger.c  coll_future_trigger.h  coll_future_utils.c
ompi/mca/coll/han/: Makefile.am  coll_han.h  coll_han_allgather.c  coll_han_allreduce.c  coll_han_bcast.c  coll_han_component.c  coll_han_gather.c  coll_han_module.c  coll_han_scatter.c  coll_han_trigger.c  coll_han_trigger.h  coll_han_utils.c
ompi/mca/coll/shared/: Makefile.am  coll_shared.h  coll_shared_allreduce.c  coll_shared_barrier.c  coll_shared_bcast.c  coll_shared_component.c  coll_shared_module.c  coll_shared_reduce.c
ompi/mca/coll/solo/: coll_solo.h  coll_solo_allreduce.c  coll_solo_bcast.c  coll_solo_module.c  coll_solo_reduce.c
ompi/mca/coll/tuned/: coll_tuned_bcast_decision.c  coll_tuned_reduce_decision.c
ompi/mpi/c/: ibcast.c
ompi/request/: request.c  request.h
opal/datatype/: opal_datatype.h  opal_datatype_copy.c  opal_datatype_copy.h  opal_datatype_cuda.c  opal_datatype_cuda.h
opal/datatype/cuda/: opal_datatype_cuda.cu  opal_datatype_cuda.cuh  opal_datatype_cuda_internal.cuh  opal_datatype_pack_cuda_wrapper.cu  opal_datatype_unpack_cuda_wrapper.cu
opal/mca/btl/tcp/: btl_tcp_endpoint.c
opal/mca/common/cuda/: common_cuda.c  common_cuda.h
opal/mca/pmix/pmix112/pmix/include/pmix/autogen/: config.h
opal/mca/pmix/pmix112/pmix/include/private/autogen/: config.h
opal/mca/pmix/pmix120/pmix/include/pmix/autogen/: config.h
opal/mca/pmix/pmix120/pmix/include/private/autogen/: config.h
